Add Vector2 class

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -18,3 +18,24 @@ Pos=665,121
 Size=574,391
 Collapsed=0
 
+[Window][Dear ImGui Demo]
+ViewportPos=1729,317
+ViewportId=0xE927CF2F
+Size=550,808
+Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1702,827
+Collapsed=0
+
+[Window][Example: Log]
+Pos=0,19
+Size=422,808
+Collapsed=0
+DockId=0x00000003,0
+
+[Docking][Data]
+DockSpace   ID=0x3BC79352 Pos=288,275 Size=1702,808 Split=X
+  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=422,808 Selected=0xBF126D42
+  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1278,808 CentralNode=1
+
